--- a/Disp_WinForm/Testing.resx
+++ b/Disp_WinForm/Testing.resx
@@ -117,4 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="comboBox_buttons_for_pin.Items" xml:space="preserve">
+    <value>MB:    Кнопки стеклоподъемников на двери водителя все четыре на поднятие стекол Кнопки на левой стороне руля: "Назад", "Домой", Cенсорная кнопка бортового компьютера. Кнопки на правой стороне руля: , "Назад", "Домой", "Голосовое управление", "Трубку взять", "Трубку положить", "Звезда", "Выключить звук", Cенсорная кнопка мультимедийной системы. Остальные кнопки: Подрулевые лепестки переключения КПП.</value>
+  </data>
+  <data name="comboBox_buttons_for_pin.Items1" xml:space="preserve">
+    <value>MB:    Кнопки стеклоподъемников на двери водителя три на поднятие стекол кроме водительского. Кнопки на руле: "+", "-", "Поднять трубку", "Опустить трубку", "Стрелка вверх", "Стрелка вниз" (стрелки только в режиме управления "RADIO"), "Голосовое управление включить", "Голосовое управление выключить". Кнопка закрытия задних форточек на ручке двери водителя. Кнопки на консоли: "Обогрев водительского кресла", "Обогрев пассажирского кресла", "Обдув водительского кресла", "Обдув пассажирского кресла", "ESPoff", "Poff"</value>
+  </data>
 </root>
